<resources>
    <string name="app_name">TonAssistent</string>

    <!-- Main Activity -->
    <string name="main_title">Sound Assistant</string>
    <string name="btn_new_apps">New Apps</string>
    <string name="btn_seen_apps">Seen Apps</string>
    <string name="btn_test_notification">Test Notification</string>
    <string name="recent_notifications_title">Last 5 Notifications</string>
    <string name="copyright">© 2025 R. Sinkwitz</string>

    <!-- Notification History -->
    <string name="time_format_seconds">%d sec ago</string>
    <string name="time_format_minutes" formatted="false">%d:%02d min ago</string>

    <!-- Pending Apps Activity -->
    <string name="pending_apps_title">New Apps</string>
    <string name="dialog_open_settings">Open Settings?</string>
    <string name="dialog_open_settings_message">Open notification settings for \'%s\'?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="toast_marked_as_done">\'%s\' has been marked as done</string>
    <string name="toast_choose_notification_category">Choose \'Notifications\' and then the appropriate category to change the sound.</string>
    <string name="btn_delete_all">Delete All</string>
    <string name="dialog_delete_all_title">Delete all?</string>
    <string name="dialog_delete_all_message">Really delete all %d app(s) completely?</string>
    <string name="toast_no_apps_available">No apps available</string>
    <string name="toast_all_apps_deleted">All apps have been deleted</string>

    <!-- Seen Apps Activity -->
    <string name="seen_apps_title">Seen Apps</string>
    <string name="dialog_action_for_app">Action for \'%s\'?</string>
    <string name="btn_configure">Configure</string>
    <string name="btn_mark_as_new">Mark as New</string>
    <string name="btn_remove">Remove</string>
    <string name="toast_marked_as_new">\'%s\' has been marked as new</string>
    <string name="toast_removed">\'%s\' has been removed</string>
    <string name="btn_mark_all_as_new">Mark All as New</string>
    <string name="btn_remove_all">Delete All</string>
    <string name="dialog_mark_all_as_new_title">Mark all as new?</string>
    <string name="dialog_mark_all_as_new_message">Really move all %d app(s) back to \'New Apps\'?</string>
    <string name="toast_all_marked_as_new">All apps have been marked as new</string>

    <!-- Notification Listener Service -->
    <string name="notification_from">Notification from %s</string>
    <string name="notification_title_text">title: \'%1$s\', text: \'%2$s\'</string>
    <string name="channel_not_found">Channel \'%s\' not found</string>
    <string name="no_sound_config_found">No sound configuration found for %s</string>
    <string name="notification_without_sound_ignored">Notification without sound ignored: %s</string>
    <string name="notification_only_alert_once">Notification is marked as \'only alert once\': %s</string>
    <string name="notification_channel_found">NotificationChannel for id \'%s\': found</string>

    <!-- Test Notification -->
    <string name="test_notification_title">Test</string>
    <string name="test_notification_text">Test Notification</string>
    <string name="test_channel_name">Test Channel</string>
    <string name="test_channel_description">Channel for test notifications</string>

    <!-- Help Activity -->
    <string name="help_title">Help</string>
    <string name="btn_help">Help</string>
    <string name="btn_close">Close</string>
    <string name="help_content"><![CDATA[
<b>Welcome to Sound Assistant!</b><br/><br/>

This app helps you configure different notification sounds for your apps.<br/><br/>

<b>1. New Apps</b><br/>
Shows apps that have sent notifications with sound but have not yet been configured. Tap an entry to open the app\'s notification settings and configure a sound.<br/><br/>

<b>2. Seen Apps</b><br/>
Shows apps that you have already opened the settings for. Here you can:<br/>
• Mark as New: Move back to \"New Apps\" list<br/>
• Remove: Delete from the list<br/><br/>

<b>3. Last 5 Notifications</b><br/>
Shows the most recent notifications with sounds. Tap an entry to open the notification settings of that app.<br/><br/>

<b>4. Test Notification</b><br/>
Sends a test notification to verify that the app is working correctly.<br/><br/>

<b>Important Notes:</b><br/>
• The app only monitors notifications with sound<br/>
• System notifications are automatically filtered<br/>
• The content of your notifications is never read or stored<br/>
• Only the app name and time are captured<br/><br/>

<b>Tip:</b> Different apps can have multiple notification categories. Make sure you configure the sound for the correct category in the app settings.
    ]]></string>

    <!-- Onboarding Activity -->
    <string name="onboarding_step1_title">Welcome!</string>
    <string name="onboarding_step1_description">Sound Assistant helps you set up different notification sounds for your apps.\n\nThis way you can recognize each app by its individual sound.</string>
    <string name="onboarding_step2_title">Permission Required</string>
    <string name="onboarding_step2_description">To monitor notifications, the app needs access to notifications.\n\nThe content of your notifications is not read or stored.</string>
    <string name="onboarding_step3_title">Test Notification Permission</string>
    <string name="onboarding_step3_description">To send test notifications, the app needs permission to post notifications.\n\nThis is needed to test your sound settings.</string>
    <string name="onboarding_step4_title">Done!</string>
    <string name="onboarding_step4_description">You can now get started!\n\nWhen apps send notifications with sound, they will appear under \"New Apps\". Tap on them to set an individual sound.</string>
    <string name="onboarding_listener_dialog_title">Grant Notification Access</string>
    <string name="onboarding_listener_dialog_message">Please enable notification access for Sound Assistant in the settings.</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_grant_permission">Grant Permission</string>
    <string name="btn_open_settings">Open Settings</string>
</resources>
