<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ListView
        android:id="@+id/listSeenApps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnMarkAllAsNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_mark_all_as_new"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rounded_button_green"
            android:textColor="@android:color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

        <Button
            android:id="@+id/btnRemoveAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_delete_all"
            android:layout_marginStart="4dp"
            android:background="@drawable/rounded_button_gray"
            android:textColor="@android:color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_close"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button_blue"
        android:textColor="@android:color/white"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>
</LinearLayout>
